<resources>
    <string name="app_name">Dealsweb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">title</string>
    <string name="Rs">\u20B9</string>

    <string name="nav_item_accessories">Acessories</string>

    <string name="link_text">Already have an account?<a href="Dealsweb.com">Sign In</a> in a text</string>
    <string name="passowrd">Password</string>
    <string name="email">E-mail Address</string>
    <string name="facebook_app_id">1854069534827378</string>


    <string name="tv_fb_dont">Don\'t have an account\?Join Now </string>


    <string name="display_name">Display Name</string>
    <string name="email_profile">Email</string>
    <string name="location">Location</string>
    <string name="hobbies">Interest/Hobbies</string>






    <string name="popup_profile">Profile</string>
    <string name="popup_subscriptions">Subscriptions</string>
    <string name="popup_likes">Likes</string>
    <string name="popup_logout">Logout</string>
    <string-array name="user_details">
        <item>@string/popup_profile</item>
        <item>@string/popup_subscriptions</item>
        <item>@string/popup_likes</item>
        <item>@string/popup_logout</item>
    </string-array>
    <!--      profile      -->

    <string name="profile">Profile</string>

    <string name="first_name">Name</string>

    <string name="gender">Gender</string>
    <string name="tv_email">Email</string>

    <string name="submit">Submit</string>

    <string name="display">Display</string>
    <!--contact us-->
    <string name="contact_sub_quotes">Have any questions or comments about the deals we post? Or do you just want to say hi?We would love to hear from you!Leave your name email and message below and we will be sure to reply!</string>
    <string name="ed_spinner_select">Please Select</string>
    <string name="I_would">I\'D Like To</string>

    <string name="contact_name">Name</string>
    <string name="contact_select">Select</string>

    <string name="contact_email">Email</string>
    <string name="contact_message">Message</string>
    <string name="contact_btn_submit">Submit</string>
    <!--About-->
    <string name="about_txt_one">Welcome to Dealsweb.com, your one stop shop for the best online deals and coupons. With Deals Web, you won\’t be stuck searching the internet for cheap deals and discount codes. The latest offers, promotional codes, and coupons from the nation\’s top retailers are right at your fingertips!</string>
    <string name="about_txt_two">We strive to provide you with the most up-to-date news and shopping tips from your favorite brands on our blog. At Deals Web, we do the hard part for you so you can sit back, relax and find everything you never knew you needed at a great price!</string>
    <string name="about_end_heading">Have a Happy Shopping!</string>
    <string name="about_heading">About</string>
    <!--forgot password-->
    <string name="success_forgot_password">An e-mail has been sent to your e-mail address with instructions on how to obtain your New password.</string>
    <string name="fail_forgot_password">Please enter your signed up e-mail address</string>
    <!--profile-->
    <string name="need_verify"> Need to Verify</string>
    <!--privacy policy-->
</resources>
