<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">


    <!-- Screen Design for Photos -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:padding="15dip"
                android:text="@string/about_heading"
                android:textColor="@color/nav_blue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/about_txt_one"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dip"
                android:lineSpacingExtra="5dp"
                android:text="@string/about_txt_two"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/about_end_heading"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>