<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">


    <!--  Screen Design for VIDEOS -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="Contact Us"
                android:textColor="@color/nav_blue"
                android:textSize="20sp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/contact_sub_quotes"
                android:textColor="#90000000"
                android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/llv_entries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llv_pic"
                android:layout_centerInParent="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="0dp"
                        >

                        <TextView
                            android:id="@+id/tv_i_would"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/I_would"
                            android:textSize="14sp"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            />

                        <Spinner
                            android:id="@+id/sp_select"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:layout_alignParentRight="true"
                            android:hint="@string/contact_select"
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/spinner_drawable"
                            android:layout_marginBottom="6dp"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="0dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="visible"
                        >

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/contact_name"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/ed_name"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/green_small_rounded"
                            android:gravity="center"
                            android:hint="@string/contact_name"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/fname_size" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlv_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="0dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/contact_email"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/ed_email"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"

                            android:background="@drawable/green_small_rounded"
                            android:gravity="center"
                            android:hint="@string/contact_email"
                            android:inputType="text"
                            android:layout_marginLeft="0dp"
                            android:padding="14dp"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/fname_size" />

                    </RelativeLayout>
                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="0dp"
                        android:text="@string/contact_message"
                        android:textColor="@color/black" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edittext_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/green_small_rounded"
                    android:cursorVisible="false"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:paddingLeft="5dp"
                    android:scrollbars="vertical" />
                <Button
                    android:id="@+id/contact_btn_submit"
                    android:layout_width="210dp"
                    android:layout_height="46dp"
                    android:text="@string/contact_btn_submit"
                    android:padding="10dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/button_bg_blue"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
