<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toobar"
            layout="@layout/toolbar" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/toolbar_background_color"
            android:showDividers="none"
            android:soundEffectsEnabled="true"
            android:splitMotionEvents="true"
            />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.05"
            android:visibility="gone">
        </FrameLayout>

        <ScrollView
            android:id="@+id/sv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/rll_web_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_privacy_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="Privacy Policy"
                        android:textColor="@color/nav_blue"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tv_privacy_heading"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:text="@string/about_txt_one"
                        android:layout_marginRight="10dp"
                        android:gravity="left"
                        android:lineSpacingExtra="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_year_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_privacy_policy"
                        android:layout_gravity="left"
                        android:layout_marginBottom="50dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="left"
                        android:lineSpacingExtra="5dp"
                        android:textSize="14sp" />
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/llv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:padding="15dip"
                        android:text="@string/about_heading"
                        android:textColor="@color/nav_blue"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/about_txt_one"
                        android:textSize="14sp" />

                    <!-- <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="15dip"
                         android:lineSpacingExtra="5dp"
                         android:text="@string/about_txt_two"
                         android:textSize="14sp" />-->

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:padding="15dip"
                        android:text="@string/about_end_heading"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</TabHost>