<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/hotestdeals_toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:background="@color/sky_blue"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize">


            <ImageView
                android:id="@+id/backarrow_profile1"
                android:layout_width="35dp"
                android:layout_height="35dp"

                android:layout_alignParentLeft="true"

                android:layout_centerInParent="true"
                android:padding="5dp"
                android:src="@drawable/backarrowwhite" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/backarrow_profile1"
                android:text="Profile"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </RelativeLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/llv_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/pattern"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilepic1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/profe_icn"

                        />

                    <TextView
                        android:id="@+id/profile_need_to_verify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:gravity="right"
                        android:text="@string/need_verify"
                        android:textColor="@color/red"
                        android:textSize="18dp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:text="@string/first_name"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/innerLine1"
                            android:layout_width="70dp"
                            android:layout_height="2dp"

                            android:layout_marginTop="5dp"
                            android:background="@color/grey" />

                        <TextView
                            android:id="@+id/profile_nAME1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="About Me"
                            android:textColor="@color/grey"
                            android:textSize="18dp" />

                        <View
                            android:id="@+id/innerLine"
                            android:layout_width="70dp"
                            android:layout_height="2dp"
                            android:layout_marginTop="5dp"

                            android:background="@color/grey" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/aboutme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"

                        android:gravity="center"

                        android:text="Android Developer"
                        android:textColor="@color/grey"
                        android:textSize="13dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/edit_profile"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/blue"
                            android:drawableLeft="@drawable/edit_profile_icon"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:text="Edit Profile"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/change_password_icon" />

                        <TextView
                            android:id="@+id/changepassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="Change Password"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/display_name"
                    android:textColor="@color/blue"

                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/display_name_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/grey"
                    android:textSize="16dp"

                    />

                <View
                    android:id="@+id/innerLine4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/email_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/email_profile"
                    android:textColor="@color/blue"

                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text=""
                    android:textColor="@color/grey"
                    android:textSize="16dp"

                    />

                <View
                    android:id="@+id/innerLine5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/location"
                    android:textColor="@color/blue"

                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text=""
                    android:textColor="@color/grey"
                    android:textSize="16dp"

                    />

                <View
                    android:id="@+id/innerLine6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/hobbies_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hobbies"
                    android:textColor="@color/blue"

                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/hobbies_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text=""
                    android:textColor="@color/grey"
                    android:textSize="16dp"

                    />

                <View
                    android:id="@+id/innerLine7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/grey" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>